src/test/ui/argument-suggestions/extra_arguments.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:7:3
   |
LL |   empty("");
   |   ^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:1:4
   |
LL | fn empty() {}
   |    ^^^^^
help: make these changes
   |
LL |   empty();
   |   ^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:9:3
   |
LL |   one_arg(1, 1);
   |   ^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:2:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------
help: make these changes
   |
LL |   one_arg(1);
   |   ^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:10:3
   |
LL |   one_arg(1, "");
   |   ^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:2:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------
help: make these changes
   |
LL |   one_arg(1);
   |   ^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:11:3
   |
LL |   one_arg(1, "", 1.0);
   |   ^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:2:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------
help: make these changes
   |
LL |   one_arg(1);
   |   ^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:13:3
   |
LL |   two_arg_same(1, 1, 1);
   |   ^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_same(1, 1);
   |   ^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:14:3
   |
LL |   two_arg_same(1, 1, 1.0);
   |   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_same(1, 1);
   |   ^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:16:3
   |
LL |   two_arg_diff(1, 1, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------
help: make these changes
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:17:3
   |
LL |   two_arg_diff(1, "", "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------
help: make these changes
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:18:3
   |
LL |   two_arg_diff(1, 1, "", "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------
help: make these changes
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:19:3
   |
LL |   two_arg_diff(1, "", 1, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------
help: make these changes
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:22:3
   |
LL |   two_arg_same(1, 1,     "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_same(1, 1);
   |   ^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:23:3
   |
LL |   two_arg_diff(1, 1,     "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------
help: make these changes
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:24:3
   |
LL | /   two_arg_same(
LL | |     1,
LL | |     1,
LL | |     ""
LL | |   );
   | |___^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_same(1, 1);
   |   ^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:30:3
   |
LL | /   two_arg_diff(
LL | |     1,
LL | |     1,
LL | |     ""
LL | |   );
   | |___^
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------
help: make these changes
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^^^^^^^

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0059`.
